cmake_minimum_required(VERSION 3.14)
project(WONAL)

set(CMAKE_C_COMPILER /home/oyliy/intel/bin/icc)
set(CMAKE_CXX_COMPILER /home/oyliy/intel/bin/icpc)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")

add_executable(WONAL main.cpp LUfac.h trsm.h Cholesky_fac.h QRfac.h inv.h)
add_executable(ompver1 mainomp.cpp)
add_executable(TestOmp testomp.cpp)
add_executable(mklmm mklmm.cpp basewo.h)
add_executable(mmomp mmomp.cpp)
add_executable(mmmemomp memproject/mmmemomp.cpp)
add_executable(womemomp memproject/womemomp.cpp)
add_executable(vertest vertest.cpp)
add_executable(blwo memproject/block_wo.cpp)
add_executable(wonal main1.cpp)
add_executable(co co.cpp)
add_executable(test test.cpp trsm.h basewo.h)
add_executable(dram Debugfiles/main_dram.cpp Debugfiles/base.h)

target_link_libraries(WONAL pmem)
target_link_libraries(WONAL memkind)
target_link_libraries(mmmemomp memkind)
target_link_libraries(womemomp memkind)
target_link_libraries(blwo memkind)
target_link_libraries(ompver1 /home/oyliy/intel/compilers_and_libraries_2019.5.281/linux/compiler/lib/intel64_lin/libiomp5.so)
target_link_libraries(TestOmp /home/oyliy/intel/compilers_and_libraries_2019.5.281/linux/compiler/lib/intel64_lin/libiomp5.so)
target_link_libraries(mklmm mkl)
target_link_libraries(test memkind)


message(STATUS "Checking OpenMP")
find_package(OpenMP)
IF(OPENMP_FOUND)
    message("Found OpenMP!")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${OpenMP_SHARED_LINKER_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ELSE()
    message("Missed OpenMP!")
ENDIF()